<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    tools:context="StudentActivity"
    tools:ignore="RtlSymmetry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_name_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_name_student" />

        <EditText
            android:id="@+id/enter_name_student"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/name_student"
            android:importantForAutofill="no"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/information"
            style="@style/Widget.ZooAnimal.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_grade" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/icon_grade_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_grade_student" />

        <EditText
            android:id="@+id/enter_grade_student"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/grade_student"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/information_subject"
            style="@style/Widget.ZooAnimal.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subjects_available" />
    </LinearLayout>

    <RadioButton
        android:id="@+id/mathematical_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mathematics" />

    <RadioButton
        android:id="@+id/science_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/science" />

    <RadioButton
        android:id="@+id/spanish_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spanish" />

    <Button
        android:id="@+id/save_button_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/save_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/icon_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_question_zoo" />

        <TextView
            android:id="@+id/consultation_question"
            style="@style/Widget.ZooAnimal.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_consult" />
    </LinearLayout>

    <Button
        android:id="@+id/consult_mathematic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_math_students" />

    <Button
        android:id="@+id/consult_science"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_science_students" />

    <Button
        android:id="@+id/consult_spanish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_spanish_students" />

    <Button
        android:id="@+id/consult_students"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_the_students" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/icon_result_consult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_result_consult" />

        <TextView
            android:id="@+id/print_result_student"
            style="@style/Widget.ZooAnimal.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_student" />
    </LinearLayout>

    </LinearLayout>

</ScrollView>

