<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:ignore="RtlSymmetry">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_name_animal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_register_animal"/>

        <EditText
            android:id="@+id/enter_name_animal"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/name_animal"
            android:importantForAutofill="no"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_specie_animal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_specie_animal"/>

        <EditText
            android:id="@+id/enter_specie_animal"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/specie_animal"
            android:importantForAutofill="no"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_type_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_type_food"/>

        <EditText
            android:id="@+id/enter_food_animal"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/type_food"
            android:importantForAutofill="no"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/save_button_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/save_button"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/icon_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_question_zoo"/>

        <TextView
            android:id="@+id/question"
            style="@style/Widget.ZooAnimal.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animal_question" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/options_consult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/question"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/all_herbivores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_all_herbivores" />

        <RadioButton
            android:id="@+id/all_carnivores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_all_carnivores" />

        <RadioButton
            android:id="@+id/all_animals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_all_animals" />
    </RadioGroup>

    <Button
        android:id="@+id/consult_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/consult_button" />

    <TextView
        android:id="@+id/print_result"
        style="@style/Widget.ZooAnimal.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"/>
</LinearLayout>